<resources>
    <string name="app_name">Food Framer</string>
    <string name="title_weekday_list_activity">Daily Plans</string>
    <string name="action_settings">Settings</string>
    <string name="create_upper_case">CREATE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="new_account_upper_case">NEW ACCOUNT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_logout_key">logout_button</string>
    <string name="new_plan">New Plan</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_daily_plan">" Plan"</string>
    <string name="new_grocery_list">New Grocery List</string>
    <string name="new_meal">New Meal</string>
    <string name="alert_missing_plan_name">Missing plan name</string>
    <string name="alert_plan_already_exists">Plan already exists</string>
    <string name="you_have_no_plans">You have no plans! =/</string>
    <string name="click_on_the_button_and_start_planning_now">Click on the + button and start planning now!</string>
    <string name="you_have_no_items">You have no items! =/</string>
    <string name="click_on_the_button_and_start_now">Click on the + button and start now!</string>
    <string name="password_lower_case">password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="meal_name">Meal Name</string>
    <string name="notes">Notes</string>
    <string name="plan_name">Plan Name</string>
    <string name="prepday">Prepday</string>
    <string name="add">ADD</string>
    <string name="dish_name">Dish Name</string>
    <string name="prep_day_name">Prep Day Name</string>
    <string name="oooopsie">Ooopsie!</string>
    <string name="alert_wrong_credentials">You enter the wrong credentials. Try again!</string>
    <string name="got_it">Got it!</string>
    <string name="alert_first_name_missing">You forgot your first name.</string>
    <string name="alert_last_name_missing">You forgot your last name.</string>
    <string name="alert_invalid_email">You entered an invalid email.</string>
    <string name="alert_username_too_short">Username must be at least six characters long.</string>
    <string name="alert_password_too_short">Password must be at least six characters long.</string>
    <string name="alert_passwords_do_not_match">Passwords do not match.</string>
    <string name="toast_enter_dish_name">Enter a Dish Name.</string>
    <string name="toast_add_one_dish">Add at least one Dish.</string>
    <string name="toast_enter_prepday_name">Enter a Prepday name.</string>
    <string name="toast_enter_a_value">Enter a value</string>
</resources>
