<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.RegistrationActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/new_account_upper_case"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/et_first_name"
            android:inputType="textPersonName"
            style="@style/RegistrationEditTextStyle"
            android:gravity="center_vertical"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/et_last_name"
            android:inputType="textPersonName"
            style="@style/RegistrationEditTextStyle"
            android:gravity="center_vertical"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/et_username"
            android:inputType="text"
            style="@style/RegistrationEditTextStyle"
            android:gravity="center_vertical"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            style="@style/RegistrationEditTextStyle"
            android:gravity="center_vertical"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            style="@style/RegistrationEditTextStyle"
            android:gravity="center_vertical"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:inputType="textPassword"
            style="@style/RegistrationEditTextStyle"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/create_upper_case"
        android:onClick="registerNewUser"/>

</LinearLayout>
